--- a/public/projects.json
+++ b/public/projects.json
@@ -1,44 +1,38 @@
-[
-    {
-        "title": "Free Scrabble",
+{
+    "Free Scrabble": {
         "description": "A one-try, one-player Scrabble game written in Python",
         "field": "Vanilla (Python)",
         "difficulty": "Beginner",
         "creator": "Nyx Iskandar"
     },
-    {
-        "title": "Personal Portfolio Website",
+    "Personal Portfolio Website": {
         "description": "A personal portfolio website built using Next.js",
         "field": "Web Development",
         "difficulty": "Intermediate",
         "creator": "Nyx Iskandar"
     },
-    {
-        "title": "Dragon Ball Classifier",
+    "Dragon Ball Classifier": {
         "description": "An image classification model for Dragon Ball characters",
         "field": "Machine Learning",
         "difficulty": "Intermediate",
         "creator": "Nyx Iskandar"
     },
-    {
-        "title": "Fresh Jokes",
+    "Fresh Jokes": {
         "description": "A joke generator built with Fresh",
         "field": "Web Development",
         "difficulty": "Intermediate",
         "creator": "Nyx Iskandar"
     },
-    {
-        "title": "Typing Test",
+    "Typing Test": {
         "description": "A typing speed and accuracy test written purely in Python",
         "field": "Vanilla (Python)",
         "difficulty": "Intermediate",
         "creator": "Nyx Iskandar"
     },
-    {
-        "title": "Blockchain Explorer",
+    "Blockchain Explorer": {
         "description": "An introduction to the blockchain, and related JavaScript Libraries",
         "field": "Web3 / Crypto",
         "difficulty": "Intermediate",
         "creator": "Matthew Chan"
     }
-]
+}
