--- a/public/projects.json
+++ b/public/projects.json
@@ -3,36 +3,42 @@
         "description": "A one-try, one-player Scrabble game written in Python",
         "field": "Vanilla (Python)",
         "difficulty": "Beginner",
-        "creator": "Nyx Iskandar"
+        "creator": "Nyx Iskandar",
+        "date": "May 29, 2022"
     },
     "Personal Portfolio Website": {
         "description": "A personal portfolio website built using Next.js",
         "field": "Web Development",
         "difficulty": "Intermediate",
-        "creator": "Nyx Iskandar"
+        "creator": "Nyx Iskandar",
+        "date": "Jun 2, 2022"
     },
     "Dragon Ball Classifier": {
         "description": "An image classification model for Dragon Ball characters",
         "field": "Machine Learning",
         "difficulty": "Intermediate",
-        "creator": "Nyx Iskandar"
+        "creator": "Nyx Iskandar",
+        "date": "Jun 19, 2022"
     },
     "Fresh Jokes": {
         "description": "A joke generator built with Fresh",
         "field": "Web Development",
         "difficulty": "Intermediate",
-        "creator": "Nyx Iskandar"
+        "creator": "Nyx Iskandar",
+        "date": "Jul 9, 2022"
     },
     "Typing Test": {
         "description": "A typing speed and accuracy test written purely in Python",
         "field": "Vanilla (Python)",
         "difficulty": "Intermediate",
-        "creator": "Nyx Iskandar"
+        "creator": "Nyx Iskandar",
+        "date": "Aug 26, 2022"
     },
     "Blockchain Explorer": {
         "description": "An introduction to the blockchain, and related JavaScript Libraries",
         "field": "Web3 / Crypto",
         "difficulty": "Intermediate",
-        "creator": "Matthew Chan"
+        "creator": "Matthew Chan",
+        "date": "Sep 7, 2022"
     }
 }
