--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/loader": "^2.1.3",
     "@mdx-js/react": "^2.1.3",
     "@next/mdx": "^12.3.1",
+    "@vercel/analytics": "^0.1.1",
     "ethers": "^5.7.0",
     "next": "^12.3.1",
     "react": "18.1.0",
