--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,21 @@
+# build output
+dist/
+.output/
+
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules/
 
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.vscode
-.DS_Store
-*.pem
-
-# debug
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# local env files
-.env*.local
+# environment variables
+.env
+.env.production
 
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
+# macOS-specific files
+.DS_Store
+.vscode
+.npmrc
