--- a/public/projects.json
+++ b/public/projects.json
@@ -54,5 +54,12 @@
         "difficulty": "Advanced",
         "creator": "Nyx Iskandar",
         "date": "Oct 12, 2022"
+    },
+    "Hand Drawn Digit Classifier": {
+        "description": "A HandDrawn-Digit classifying Neural Network built in Python",
+        "field": "Machine Learning",
+        "difficulty": "Intermediate",
+        "creator": "Bhvya Sahni",
+        "date": "Dec 16, 2022"
     }
 }
