🔖 Complete Workbook: Hand-Drawn Digit Classifier

--- a/public/projects.json
+++ b/public/projects.json
@@ -54,5 +54,12 @@
         "difficulty": "Advanced",
         "creator": "Nyx Iskandar",
         "date": "Oct 12, 2022"
+    },
+    "Hand-Drawn Digit Classifier": {
+        "description": "A neural network classifying hand-drawn digits built in Python",
+        "field": "Machine Learning",
+        "difficulty": "Intermediate",
+        "creator": "Bhvya Sahni",
+        "date": "Dec 16, 2022"
     }
 }
