--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,34 @@
-# build output
-dist/
-.output/
-
 # dependencies
-node_modules/
+/node_modules
+/.pnp
+.pnp.js
 
-# logs
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.vscode
+.DS_Store
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
+.pnpm-debug.log*
 
-# environment variables
-.env
-.env.production
+# local env files
+.env*.local
 
-# macOS-specific files
-.DS_Store
-.vscode
-.npmrc
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
