--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
   "name": "nexliber",
-  "type": "module",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@astrojs/mdx": "^0.12.0",
-    "@astrojs/react": "^1.2.2",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vercel/analytics": "^0.1.5",
-    "astro": "^1.6.12",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@code-hike/mdx": "^0.7.4",
+    "@mdx-js/loader": "^2.1.3",
+    "@mdx-js/react": "^2.1.3",
+    "@next/mdx": "^12.3.1",
+    "@vercel/analytics": "^0.1.1",
+    "ethers": "^5.7.0",
+    "next": "^12.3.1",
+    "react": "18.1.0",
+    "react-dom": "18.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "17.0.35",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.4",
+    "eslint": "8.16.0",
+    "eslint-config-next": "12.1.6",
+    "typescript": "4.6.4"
   }
 }
