🔖 Complete Workbook: Tenzies (#45)
* Complete Workbook: Tenzies

* 🔖 Complete Workbook: Tenzies

Co-authored-by: Dave Aronmwan <108290182+d-a-ve@users.noreply.github.com>

* ✨️ New publication date for Tenzies

* 🔖 Complete Workbook: Tenzies

* 🔖 Complete Workbook: Tenzies

---------

Co-authored-by: xyntechx <xyntechx@gmail.com>

--- a/public/projects.json
+++ b/public/projects.json
@@ -68,5 +68,12 @@
         "difficulty": "Intermediate",
         "creator": "Kelvin Praises",
         "date": "Jan 28, 2023"
+    },
+    "Tenzies": {
+        "description": "A React game where you roll 10 dice until all the dice are the same",
+        "field": "Web Development",
+        "difficulty": "Beginner",
+        "creator": "Dave Aronmwan",
+        "date": "Feb 01, 2023"
     }
 }
