🔖 Complete Workbook: Interactive Rating (#46)
* Complete Workbook: Interactive Rating

* 🔖 Complete Workbook: Interactive Rating

* 🔖 Complete Workbook: Interactive Rating

* 🔖 Complete Workbook: Interactive Rating

---------

Co-authored-by: xyntechx <xyntechx@gmail.com>

--- a/public/projects.json
+++ b/public/projects.json
@@ -75,5 +75,12 @@
         "difficulty": "Beginner",
         "creator": "Dave Aronmwan",
         "date": "Feb 01, 2023"
+    },
+    "Interactive Rating": {
+        "description": "A project displaying an interactive rating component for users",
+        "field": "Web Development",
+        "difficulty": "Beginner",
+        "creator": "Okeke Chidera",
+        "date": "Feb 05, 2023"
     }
 }
